# knowledge-producer

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
reports/: report-2026-02-28-7d.html  report-2026-02-28-7d.md  report-2026-03-01-1d.html  report-2026-03-01-1d.md  report-2026-03-02-1d.html  report-2026-03-02-1d.md  report-2026-03-03-1d.html  report-2026-03-03-1d.md  report-2026-03-04-1d.html  report-2026-03-04-1d.md  report-2026-03-05-1d.html  report-2026-03-05-1d.md  report-2026-03-06-1d.html  report-2026-03-06-1d.md  report-2026-03-07-1d.html  report-2026-03-07-1d.md  report-2026-03-10-2d.html  report-2026-03-10-2d.md  report-2026-03-11-1d.html  report-2026-03-11-1d.md  report-2026-03-12-1d.html  report-2026-03-12-1d.md  report-2026-03-13-1d.html  report-2026-03-13-1d.md  report-2026-03-21-1d.html  report-2026-03-21-1d.md  report-2026-03-21-3d.html  report-2026-03-21-3d.md  report-2026-03-21-5d.html  report-2026-03-21-5d.md  report-2026-03-24-3d.html  report-2026-03-24-3d.md
skills/ai_report/: SKILL.md
src/knowledge_producer/: __init__.py  __main__.py  categorizer.py  dedup.py  fetcher.py  focus.py  llm_summarizer.py  main.py  reporter.py  time_utils.py
src/knowledge_producer/sources/: __init__.py  arxiv_source.py  deepmind_source.py  huggingface_source.py  medium_source.py  meta_ai_source.py  nvidia_source.py  openai_source.py  rednote_source.py  twitter_source.py
